modification styles css theme enfant

--- a/wp-content/themes/planty/styles.css
+++ b/wp-content/themes/planty/styles.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: Planty
-Theme URI: http://localhost:8888/planty/
+Theme URI: https://openclassrooms.com/
 Description: Thème Planty basé sur le thème Kadence
 Author: ericpelik
-author URI: http://localhost:8888/planty/
+author URI: https://openclassrooms.com/
 Template: Kadence
 Version: 1.0.0
 License: GNU General Public License v3 (or later)
