modifications styles css

--- a/wp-content/themes/planty/styles.css
+++ b/wp-content/themes/planty/styles.css
@@ -6,8 +6,8 @@ Author: ericpelik
 author URI: https://openclassrooms.com/
 Template: Kadence
 Version: 1.0.0
-License: GNU General Public License v3 (or later)
+License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Tags: Boisson énergissante 100% naturelle, nous rencontrer, admin, commander, mentions légales
-Text Domain: planty
+Text Domain: Planty
 */
