fin de la première journée sur le formulaire. des problèmes a solutionner sur le flex du formulaire

--- a/wp-content/themes/planty/css/theme.css
+++ b/wp-content/themes/planty/css/theme.css
@@ -17,8 +17,20 @@ p {
    transform: scale(1.05) translateY(-10px);
 }
 
-.commande-image {
+.form {
    display: flex;
    flex-direction: column;
-   justify-content: center;
+   justify-content: space-between;
+}
+
+.form-title {
+   color: white;
+   font-size: 20px;
+   line-height: 24px;
+}
+
+.form-image {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
 }
