test modification css

--- a/wp-content/themes/planty/css/theme.css
+++ b/wp-content/themes/planty/css/theme.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 /* Import de la font Roboto depuis Google Fonts et on l'applique sur tous les éléments de la page */
-body * {
+tbody * {
    font-family: 'syne', sans-serif;
 }
 /* On applique un gris plus clair sur les paragraphes */
@@ -23,7 +23,7 @@ p {
    justify-content: space-between;
 }
 
-.form-title {
+.form-tittle {
    color: white;
    font-size: 20px;
    line-height: 24px;
@@ -33,4 +33,10 @@ p {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
+}
+
+hr {
+   color: white;
+   size: 1px;
+   align-content: center;
 }
