--- a/wp-content/themes/planty/css/theme.css
+++ b/wp-content/themes/planty/css/theme.css
@@ -23,7 +23,7 @@ p {
    justify-content: space-between;
 }
 
-.form-tittle {
+.form-content {
    color: white;
    font-size: 20px;
    line-height: 24px;
