debut de la seconde journée sur le formulaire

--- a/wp-content/themes/planty/css/theme.css
+++ b/wp-content/themes/planty/css/theme.css
@@ -20,23 +20,13 @@ p {
 .form {
    display: flex;
    flex-direction: column;
-   justify-content: space-between;
 }
 
-.form-content {
-   color: white;
-   font-size: 20px;
-   line-height: 24px;
+.form-fruit {
+   display: flex;
 }
 
-.form-image {
+.form-card {
    display: flex;
    flex-direction: column;
-   justify-content: space-between;
-}
-
-hr {
-   color: white;
-   size: 1px;
-   align-content: center;
 }
