--- a/wp-content/themes/planty/style.css
+++ b/wp-content/themes/planty/style.css
@@ -13,3 +13,18 @@ Text Domain: planty
 
 /* Theme customization starts here
 -------------------------------------------------------------- */
+
+.form {
+    display: flex;
+    flex-direction: column;
+ }
+ 
+ .form-fruit {
+    display: flex;
+ }
+ 
+ .form-card {
+    display: flex;
+    flex-direction: column;
+ }
+ 
